--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,78 @@ body {
 .menu .menu-item:hover {
     background: #343434;
 }
+
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%; 
+	height: 100%; 
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4);
+ }
+
+ .modal-content {
+	background-color: #fefefe;
+	margin: auto;
+	padding: 20px;
+	border: 1px solid #888;
+	border-radius: 10px;
+	width: 400px;
+	height: 150px;
+ }
+
+ .close {
+	color: rgb(248, 37, 37);
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+ }
+ 
+ .close:hover,
+ .close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+ }
+
+ .set-timer-time{
+	 display: flex;
+ }
+
+ .button-for-timer {
+	background-color: white; 
+	color: #0970ff; 
+	border: 2px solid #afafaf;
+	border-radius: 50%;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	width: 50px;
+	height: 50px;
+	transition-duration: 0.4s;
+	cursor: pointer;
+
+ }
+ 
+ .button-for-timer:hover {
+	background-color: #2c84ff;
+	color: #d6e7ff;
+ }
+
+ .timer-button-container{
+	 margin-top: 20px;
+	 display: flex;
+	 justify-content: space-around;
+ }
+
+ .modal-content > h2{
+	 margin-top: 10px;
+	 font-family: Arial, Helvetica, sans-serif;
+	 color: #0970ff;
+	 font-size: 14px;
+ }
