--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ body {
     background: #343434;
 }
 
-.modal {
+#myModal, #myMessage {
 	display: none;
 	position: fixed;
 	z-index: 1;
@@ -50,18 +50,21 @@ body {
 	top: 0;
 	width: 100%; 
 	height: 100%; 
-	background-color: rgb(0,0,0);
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0, 0, 0, 0.18);
  }
 
  .modal-content {
-	background-color: #fefefe;
+	background-image: #fff;
+	background-image: url("./assets/bc3.jpg");
+	background-position: auto;
+	background-repeat:no-repeat;
 	margin: auto;
 	padding: 20px;
 	border: 1px solid #888;
 	border-radius: 10px;
 	width: 400px;
-	height: 150px;
+	height: 130px;
+	box-shadow: 5px 10px 20px 10px #575757;
  }
 
  .close {
@@ -103,15 +106,61 @@ body {
 	color: #d6e7ff;
  }
 
- .timer-button-container{
-	 margin-top: 20px;
+ .timer-button-container, .message-container{
+	 margin-top: 10px;
 	 display: flex;
 	 justify-content: space-around;
  }
 
  .modal-content > h2{
-	 margin-top: 10px;
-	 font-family: Arial, Helvetica, sans-serif;
-	 color: #0970ff;
-	 font-size: 14px;
+	 margin-top: 5px;
+	 font-family: "Calibri Light", Helvetica, sans-serif;
+	 font-size: 18px;
  }
+
+ .message-container > h3 {
+	font-family: "Calibri Light", Helvetica, sans-serif;
+	 color: crimson;
+	 margin-top: 20px;
+	 font-size: 25px;
+ }
+
+ #myTimer{
+	background-image: url("./assets/clock3.jpg");
+	background-position: left top;
+	background-size: cover;
+	display: none;
+	position:fixed;
+	text-align: center;
+	left: 10px;
+	top: 10px;
+	width: 300px;
+	border: 1px solid #888;
+	border-radius: 10px;
+	background-color: #fff;
+	box-shadow: 5px 10px 20px 10px #adadad;
+}
+
+.timer-block{
+	margin: 30px 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
+
+.time-block{
+	border: 1px solid gray;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: 10px;
+	width: 50px;
+	height: 50px;
+	color: black;
+	background-color: white;
+	border-radius: 50%;
+	text-align: center;
+	font-size: 20px;
+}
+
